# stm32f103c8t6-vscode-project

./: README.md
stm32f103c8t6-project/: CMakeLists.txt  CMakePresets.json  stm32f103c8tx_FLASH.ld
stm32f103c8t6-project/Inc/: stm32f10x.h  stm32f10x_it.h
stm32f103c8t6-project/Src/: main.c  stm32f10x_it.c
stm32f103c8t6-project/Startup/: startup_stm32f103c8tx.s
stm32f103c8t6-project/bsp/inc/: delay.h  dma.h  exti.h  font.h  i2c.h  led.h  spi.h  st7735.h  st7735_soft.h  usart.h
stm32f103c8t6-project/bsp/src/: delay.c  dma.c  exti.c  i2c.c  led.c  spi.c  st7735.c  st7735_soft.c  usart.c
stm32f103c8t6-project/cmake/: gcc-arm-none-eabi.cmake  vscode_generated.cmake
stm32f103c8t6-project/libs/STM32F10x_StdPeriph_Driver/: CMakeLists.txt
stm32f103c8t6-project/libs/STM32F10x_StdPeriph_Driver/inc/: stm32f10x_ASSERT.h
